# fluxion

./: Cargo.toml  LICENSE  README.md
src/: kafka.rs  lib.rs  message.rs  operators.rs  pipeline.rs  pipeline_processor.rs  python.rs
src/kafka/: consumer.rs  producer.rs
src/message/: base.rs
src/pipeline/: input.rs  output.rs  runner.rs
