[package]
name = "fluxion"
version = "0.1.0"
edition = "2021"

[lib]
name = "fluxion"
crate-type = ["lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.83"
futures = "0.3.31"
rdkafka = "0.36.2"
serde = "1.0.214"
serde_json = "1.0.132"
tokio = { version = "1.41.0", features = ["full"] }
tracing = { version = "0.1.40", features = ["attributes"] }
tracing-subscriber = "0.3.18"
