[package]
name = "fluxion"
version = "0.1.0"
edition = "2021"

[lib]
name = "fluxion"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "libtester"
path = "src/bin/libtester.rs"
required-features = ["kafka"]

[features]
default = ["python"]
kafka = ["dep:rdkafka"]
python = ["dep:pyo3"]

[dependencies]
async-trait = "0.1.83"
futures = "^0.3.31"
rdkafka = { version = "0.36.2", optional = true }
tokio = { version = "1.41.0", features = ["full"] }
tracing = { version = "0.1.40", features = ["attributes"] }
tracing-subscriber = "0.3.18"

pyo3 = { version = "0.23.3", features = ["extension-module"], optional = true }
pin-project = "1.1.7"
